--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "ESNext",
+    "outDir": "./dist",
+    "target": "es5",
+    "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
