--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Bootstrap Docker Engine API with TypeScrypt support",
   "scripts": {
+    "watch": "rimraf dist && tsc --watch",
     "lint": "eslint --ignore-path .gitignore . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
@@ -38,7 +39,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^28.0.1",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "docker-modem": "^3.0.3"
